force-app/main/default/objects/Speaker_Group_Members__c/Speaker_Group_Members__c.object-meta.xml
<CustomObject>
    <label>Speaker Group Members</label>
    <nameField>
        <displayFormat>SGM-{0000}</displayFormat>
        <label>Speaker Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Speaker Group Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>