force-app/main/default/objects/Speaker_Group_Members__c/fields/Order_Of_Display__c.field-meta.xml
<CustomField>
    <fullName>Order_Of_Display__c</fullName>
    <label>Order Of Display</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>