force-app/main/default/objects/Speaker_Group_Members__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipLabel>Speaker Group Members</relationshipLabel>
    <relationshipName>Speaker_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>