force-app/main/default/objects/Speaker_Group_Members__c/fields/Speaker_Group__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Speaker Group</label>
    <referenceTo>Speaker_Group__c</referenceTo>
    <relationshipLabel>Speaker Group Members</relationshipLabel>
    <relationshipName>Speaker_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>